[package]
name = "ril-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
regex = "1.6"
serenity = { version = "0.11", features = ["simd_json", "temp_cache"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
lazy_static = "1.4"
ril = { git = "https://github.com/jay3332/ril", features = ["all"] }
tokio = { version = "1.20", features = ["full"] }
