[package]
name = "ril-bot"
authors = ["Tom-the-Bomb"]
description = "A simple discord bot powered by serenity-rs with image manipulation function"
repository = "https://github.com/Tom-the-Bomb/ril-bot"
license = "MIT"
version = "0.1.0"
edition = "2021"
keywords = ["api", "async"]
categories = [
    "multimedia",
    "multimedia::images",
    "web-programming",
]

[dependencies]
dotenv = "0.15"
regex = "1.6"
lazy_static = "1.4"
serenity = { version = "0.11", features = ["simd_json", "temp_cache"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
ril = { git = "https://github.com/jay3332/ril", features = ["all-pure"] }
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread"] }

[profile.release]
lto = "fat"
